--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
+    "@soeyu/dev-template-parser": "^0.0.7",
     "@types/node": "^18.8.3",
     "@vitejs/plugin-legacy": "^2.2.0",
     "@vitejs/plugin-vue2": "^2.0.0",
