--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "prettier": "prettier --write ./src/**/*.{js,css,vue}"
   },
   "dependencies": {
+    "axios": "^1.1.2",
+    "axios-retry": "^3.3.1",
+    "qs": "^6.11.0",
     "vue": "^2.7.10",
     "vue-router": "^3.6.5"
   },
@@ -19,6 +22,7 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@soeyu/dev-template-parser": "^0.0.7",
     "@types/node": "^18.8.3",
+    "@types/qs": "^6.9.7",
     "@vitejs/plugin-legacy": "^2.2.0",
     "@vitejs/plugin-vue2": "^2.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
